Bug 1983387 - Don't merge Accept-Encoding: identity. r=necko-reviewers,jesup

The merge flag in HttpBaseChannel::SetRequestHeader corresponds to the
"combine a header" behavior in the fetch spec, in which we add a value
to a comma-separated list of values in the header. The fetch spec does
not tell us to *combine* (`Accept-Encoding`, `identity`), it tells us to
*append* it. We got away with this before because of a sneaky WPT change
that I'm fixing upstream
(https://github.com/web-platform-tests/wpt/pull/54373).

Differential Revision: https://phabricator.services.mozilla.com/D261327